Fix spacing on signoff lists
Per @timothyasp's suggestion

--- a/less/pulldasher.less
+++ b/less/pulldasher.less
@@ -18,7 +18,6 @@
 
 .avatar {
    width: @avatar-width;
-   margin: 2px 3px 0 0;
 }
 
 button.navbar-btn {
