--- a/views/standard/less/pull.less
+++ b/views/standard/less/pull.less
@@ -87,6 +87,16 @@
    }
 }
 
+.status-row .tooltip-inner {
+   padding-top: 6px;
+   padding-bottom: 6px;
+}
+
+.sig-row td {
+   padding-top: 1px;
+   padding-bottom: 1px;
+}
+
 .sig-info {
    text-align: left;
    padding-left: 10px;
